--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # This is the default format.
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:title
 
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+exclude: ["README.md"]
 auto: true
-# pygments: true
+pygments: true
+lsi: true
+paginate: 5
